gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/varargsstc.d
version https://git-lfs.github.com/spec/v1
oid sha256:886c3b74ab3efa9732913b4d429dbeda97450e8270e647245c9a4b304483e314
size 261
